--- a/ふりかえりガイドブック.md
+++ b/ふりかえりガイドブック.md
@@ -9,3 +9,32 @@
 5. アクションを決める
 6. ふりかりをカイゼンする
 7. アクションを実行する
+
+
+
+
+
+
+# 質問の輪とは？
+質問の輪は、**チーム全員が納得できるアイデアやアクションを作り出すための手法**です。
+チームが輪になり、一人ひとり「問い」に答えていきながら、アイデアやアクションを作成していきます。「あなたは、私たちが次に取り組むべきことは何だと思いますか」という問いに繰り返し答えていくことで、チームの意見が取り込まれた具体的なアイデアやアクションを生み出します。
+
+質問の輪では、互いの意見を尊重し合い、チームとして何をしたいかを全員で決めていくため、チームの関係性を高めることにも向いています。否定や批判は避けるようにします。一人ひとりの意見が、徐々にチームの総意として変化していく様子が体験できます。
+
+## 進め方
+質問の輪では「あなたは、私たちが次に取り組むべきことは何だと思いますか」という問いを繰り返し投げかけていきます。
+
+1.最初に、質問する人を決めたら、問いを左隣の人に投げかけましょう。
+**「あなたは、私たちが次に取り組むべきことは何だと思いますか」**
+そして、左隣の人はその質問に答えます。答える時は忖度せずに自分の意見をしっかりと伝えます。
+最初は回答が具体的でなくても、自分の想いをつたえられれば十分です。答えた内容に対して、他の人の質問による掘り下げはまだ行いません。「内容がわからない」「伝わらなかった」という場合のみ、不明点を解消するために質問を行ってください。
+回答内容は、手の空いている人が適宜ホワイトボードに可視化していきます。
+
+2.次に、先ほど質問された人が質問する側に変わります。また左隣の人に同じ質問を投げかけましょう。
+**「あなたは、私たちが次に取り組むできことは何だと思いますか」**
+そして、次の人は、自分の意見を言っていきます。この質問は必ずします。質問することで、明示的に回答のバトンを次の人に手渡すことができます。
+
+3.1周終わると、チームメンバーがそれぞれどんなことを考えているのか、どんなことを重要に思っているのかが分かります。この一連の流れを、2周以上行います。アクションがどれほど具体化されているかによって、必要に応じて、３周、４周と続けてください。
+
+### ２周目
+１周目でチームの意見が可視化された状態から始まります。チームの意見の中で、「この意見は良いな、こうしたいな」と感じたものがあれば、自分の意見に取り込みましょう。
