--- a/ふりかえりガイドブック.md
+++ b/ふりかえりガイドブック.md
@@ -38,3 +38,4 @@
 
 ### ２周目
 １周目でチームの意見が可視化された状態から始まります。チームの意見の中で、「この意見は良いな、こうしたいな」と感じたものがあれば、自分の意見に取り込みましょう。
+「あなたは、わたしたちが次に取り組むべきことは何だと思いますか」という問いに対して、１周目のチーム全員の意見を取り込んだ上で、
