--- a/ふりかえりガイドブック.md
+++ b/ふりかえりガイドブック.md
@@ -38,4 +38,16 @@
 
 ### ２周目
 １周目でチームの意見が可視化された状態から始まります。チームの意見の中で、「この意見は良いな、こうしたいな」と感じたものがあれば、自分の意見に取り込みましょう。
-「あなたは、わたしたちが次に取り組むべきことは何だと思いますか」という問いに対して、１周目のチーム全員の意見を取り込んだ上で、
+「あなたは、わたしたちが次に取り組むべきことは何だと思いますか」という問いに対して、１周目のチーム全員の意見を取り込んだ上で、自分なりの回答を改めて作っていきます。また、回答した内容はホワイトボードに書いていきましょう。
+
+### ３周目
+２周目が終わって時点で、徐々に方向性が見えてくるはずです。３周目からは、これまでの意見を統合して、より具体的にアクションんを掘り下げてきます。
+回答者は
+- もしアクションを実行するとしたらいつ行うのか
+- 誰が行うのか
+- 何のために行うのか
+という掘り下げをしながら回答します。そうして、全員の意見を具体化していきます。
+
+### ４周目
+３周目までの意見を参考にして、チームとして何を行うのかを最終決定するために、さらに具体的なアクションを全員で述べていきます。
+もし４周目終了時点で意見が割れている場合は、追加で議論の時間を5分程度取り、チームにとって何が重要なのかを話し合って、アクションを最終決定します
