--- a/ふりかえりガイドブック.md
+++ b/ふりかえりガイドブック.md
@@ -10,9 +10,37 @@
 6. ふりかりをカイゼンする
 7. アクションを実行する
 
+# アジャイルなチーム
+- アジャイル（Agile）は、「俊敏な」、「素早い」といった意味を持つ単語であり、それに紐づく価値観を表します
+- アジャイルソフトウェア開発宣言
+  - 「個人と対話」、「顧客との協力」、「変化への対応」、「動くソフトウェア」がポイント
+- アジャイルなチームとは
+  - 学び、カイゼンし続けることで、変化に柔軟に対応でき、大きな価値を生み出し続けられるチーム
 
+ふりかえりの目的は、チームをアジャイルなチームへと近づけていくこと
+ふりかえりを繰り返すことで以下のような特性を身につける
 
+- コミュニケーションが活発になり、情報の透明性が上がる
+- 問題が迅速に共有され、チーム内で解決へと向かっていける
+- 価値を生み出すプロセスを自分たちで見直し、カイゼンしていける
+- チームに必要な知識を積極的に学び、吸収していける
+- 自律的に考え、行動できる
 
+チームを強くしていくための３つの段階
+- 立ち止まる
+- チームの成長を加速させる
+- プロセスをカイゼンする
+
+ふりかえりに必要なもの
+- チーム
+- 目的の決定
+- スケジュール
+- 時間
+- 場所
+- 道具
+- ファシリテーション
+
+ファシリテーションは、チームの意見やアイデアを引き出し、発想を広げたり、アイデアを収束させたりする
 
 
 # 質問の輪とは？
