--- a/ふりかえりガイドブック.md
+++ b/ふりかえりガイドブック.md
@@ -43,6 +43,48 @@
 ファシリテーションは、チームの意見やアイデアを引き出し、発想を広げたり、アイデアを収束させたりする
 
 
+### Next Action
+- アジャイルソフトウェア開発宣言は今のMACにマッチしているのか検証する。チームで話し合うのもあり
+- ふりかえりの目的はスクラムの型に追記する
+
+
+# ふりかえりを見てみよう
+
+- ふりかえりに集中する心の準備を整える
+  - 最初に全員で意見を出し合ってふりかえりのテーマを決める「ふりかえりを全員で作り上げる」意識を醸成する
+  - 例
+    - 開発の進め方を見直したい
+    - 開発の品質をあげるためにどうすれば良いか考えたい
+    - 打ち合わせを効率化したい
+
+- チームの活動を思い出す
+  - どんなことが起こったのか
+  - どんなことをしたのか
+  - どんなふうに感じたのか
+
+- ふりかえりのカイゼンを行う
+  - ふりかえりのふりかえりをおこなう
+  - ふりかえりの結果を残しておく
+
+- ふりかえりのポイント
+  - まずはプラスに目を向ける
+  - 良いところをより伸ばす
+  - 少しずつ変えていく
+  - 失敗を恐れずに
+  - 問題のコアを解決しよう
+
+経験学習サイクル
+具体的経験→内省的省察→抽象的概念化→積極的実践
+
+### Next Action
+- ふりかえり時の投票基準を明確にできていなかったので、改めてファシリする
+  - チームが次にすべきこと
+  - チームで取り組みたいこと
+- デイリーのタイミングでレトロのネタが生まれなかった確認する
+
+
+
+
 # 質問の輪とは？
 質問の輪は、**チーム全員が納得できるアイデアやアクションを作り出すための手法**です。
 チームが輪になり、一人ひとり「問い」に答えていきながら、アイデアやアクションを作成していきます。「あなたは、私たちが次に取り組むべきことは何だと思いますか」という問いに繰り返し答えていくことで、チームの意見が取り込まれた具体的なアイデアやアクションを生み出します。
