--- a/ふりかえりガイドブック.md
+++ b/ふりかえりガイドブック.md
@@ -82,7 +82,33 @@
   - チームで取り組みたいこと
 - デイリーのタイミングでレトロのネタが生まれなかった確認する
 
+# ふりかえりを始めるまで
 
+- ふりかえりでチームの活動を見返す
+  - 今どんな仕事をしていたのか
+  - どんな状況なのか
+  - どんな思いを抱いていたのか
+  - どんあところに今困っているのか
+    - 互いの仕事や思いを共有していくような場にする
+
+- コミュニケーションとコラボレーションを見直そう
+  - チームの現状を分析する
+    - チームメンバー同士でどうやってコミュニケーションをとっているのか
+    - チームのコミュニケーションの取り方をどう変えていくと良いか
+    - どうしたらチーム内でもっとコラボレーションできるか
+
+- 小さな変化を確かめ合う
+  - 何がうまくいったのか
+  - 何がうまくいかなかったのか
+  - どんなことにチャレンジしてみたのか
+  - どういうことがわかったのか
+
+
+### Next Action
+- レトロの最後にふりかえりのふりかえりをする時間を少し用意する
+  - 今回のふりかえりの感想を言い合う時間を作る
+  - ポイントは「ふりかえりをさらにカイゼンする」
+    - アイデアじゃなくてもOK。感じたことを話し合う
 
 
 # 質問の輪とは？
