--- a/ふりかえりガイドブック.md
+++ b/ふりかえりガイドブック.md
@@ -110,6 +110,101 @@
   - ポイントは「ふりかえりをさらにカイゼンする」
     - アイデアじゃなくてもOK。感じたことを話し合う
 
+# ふりかえりの進め方
+- ふりかえりの目的
+  - チームの状況や状態を共有したい
+  - チームの成功を続けたい、良いところを伸ばしたい
+  - チームの失敗を避けたい、問題を解決したい
+  - 学びや気づきを共有して、新しい実験を生み出したい
+  - チームの信頼関係を高めたい
+  - 普段話さない、さまざまな視点からチームを分析したい
+  - チームの長期間の変化をふりかえしたい
+  - チームの未来やゴール像を描きたい
+
+- できごとの思い出し
+  - 時系列で思い出す
+  - 事実・感情・学び・気づき・成功・失敗から思い出す
+  - 連想して思い出す
+  - 1人で出来事を思い出す
+  - チームで出来事を思い出す
+  - 対話の内容を可視化する
+  - 出来事を掘り下げる
+
+- アイデアを出し合う
+  - チームのためのアイデアを考える
+  - 自分おためのアイデアを考える
+  - 1人でアイデアを考える
+  - チームでアイデアを考える
+  - アイデアを共有する
+  - アイデアを発散させる
+  - アイデアを派生させる
+  - アイデアを深める
+
+- アクションを決める
+  - アクションを具体化する
+  - 実現可能な小さなアクションを作る
+  - 計測可能なアクションを作る
+  - すべてのアイデアをアクションにしようとしない
+  - 短期的・中期的・長期的なアクションを作る
+    - 短期的：すぐに実行でき、効果がすぐにわかるもの
+    - 中期的：すぐには実行できないが、そのうち実行して効果を測りたいもの
+    - 長期的：大きな変化を起こすために段階を踏んで行う
+  - アクションをその場で試してみる
+  - アクションを明文化する
+
+### Next Action
+- miroのレトロボードに「１週間の出来事」という入力エリアを追加する
+  - ふりかえりをし易くなるようにチームで出来事をアウトプットする
+
+
+# ふりかえりのマインドセット
+- ６つのマインドセット
+  - 受容する
+    - あるがままをチームで受け止めること
+      - なぜそのできごとが起こったのか
+      - 次により良くできるとしたら何ができるか
+  - 多角的に捉える
+    - 見ている立場を変えること
+    - 自分の思考と発送の癖を知ること
+    - チーム同士で引き出し合うこと
+  - 学びを祝う
+  - 小さな一歩を踏み出す
+  - 実験する
+  - 高速にフィードバックを得る
+
+# ふりかえりのファシリテーション
+- ファシリテーターは促す人
+- 1人で全てやる必要はなく、チームメンバー全員がファシリテーターであるという考え型を伝えていく
+
+
+# ふりかえりの手法を知る
+
+- 毎週のレトロでKPTの代わりにできるもの
+  - チームストーリー
+  - Fun / Done / Learn
+  - 5つのなぜ
+  - アクションのフォローアップ
+  - YWT
+  - Celebration Grid
+  - 小さなカイゼンアイデア
+  - Effort & Pain
+
+## DPA
+- 概要・目的
+  - ふりかえりのルールを全員で作り上げる手法
+  - 全員が合意できるものを選ぶ
+  - 全員が一言以上発言すること
+
+## 希望と懸念
+- 概要・目的
+  - ふりかえりのテーマを決めるのに適した手法
+  - 
+
+
+
+
+
+
 
 # 質問の輪とは？
 質問の輪は、**チーム全員が納得できるアイデアやアクションを作り出すための手法**です。
