--- a/ふりかえりガイドブック.md
+++ b/ふりかえりガイドブック.md
@@ -189,17 +189,50 @@
   - 小さなカイゼンアイデア
   - Effort & Pain
 
-## DPA
-- 概要・目的
-  - ふりかえりのルールを全員で作り上げる手法
-  - 全員が合意できるものを選ぶ
-  - 全員が一言以上発言すること
+# ふりかえりの要素と問い
+- ふりかえりの要素
+  - 事実（主観と客観・定性と定量・成功と失敗）
+  - 感情
+  - 時系列とイベント
+  - 過去・現在・未来・理想・ギャップ
+  - 学びと気づき
+  - 発散と収束
+  - アクション
 
-## 希望と懸念
-- 概要・目的
-  - ふりかえりのテーマを決めるのに適した手法
-  - 
+- 事実を収集する質問
+  - 何をしましたか・しようとしましたか
+  - 何が起こりましたか・起こらなかったですか
+  - 何を意識しましたか・忘れていましたか
+  - 想定通りだったものは何ですか・想定しなかった出来事は何ですか
+  - どんな変化を起こしましたか・起こせなかったですか
+  - どれほどの効果がありましたか
+  - 数値で確認できる変化はありましたか
+  - どれほどの時間がかかりましたか
+  - 自分から・チームから見えたものは何ですか
+  - 自分にしかみえていなかったものはなんですか
+  - 得られたもの・失われたものは何ですか
+  - できたこと・できなかったことは何ですか
+  - 継続してできたことはなんですか
+  - うまくいったこと・うまくいかなかったことは何ですか
+  - 前はできていたのに、できなくなったことは何ですか
 
+- 感情を収集する質問
+  - 楽しいと感じたのは何ですか・いつですか。なぜそう感じましたか
+  - 嬉しいと感じたのは何ですか・いつですか。なぜそう感じましたか
+  - 感謝の気持ちを感じたのは何ですか・いつですか。なぜそう感じましたか
+  - 悲しいと感じたのは何ですか・いつですか。なぜそう感じましたか
+  - 憤り・怒りを感じたのは何ですか・いつですか。なぜそう感じましたか
+  - ストレス・フラストレーションを感じたのは何ですか・いつですか。なぜそう感じましたか
+  - つらいと感じたのは何ですか・いつですか。なぜそう感じましたか
+  - 危険・危機を感じたのは何ですか・いつですか。なぜそう感じましたか
+  - 以前と同じ感情になったのは何ですか・いつですか。なぜそう感じましたか
+  - 以前と違う感情になったのは何ですか・いつですか。なぜそう感じましたか
+  - （ふりかえりの対象期間に）点数をつけるとしたら何点ですか。なぜそう感じていますか。
+  - 感情が最も揺れ動いたのは何ですか・いつですか。なぜそう感じましたか
+  - （ふりかえりの対象期間で）感情はどのように変化していましたか。傾向はありますか。
+  - 気持ちや気分が高まったのはいつですか。それは何ですか。
+  - 気持ちや気分が落ち込んだのはいつですか。それは何ですか。
+  - 最もXX（楽しい・悲しいなどの感情）と感じたのはなんですか・いつですか。なぜそう感じましたか
 
 
 
