--- a/ふりかえりガイドブック.md
+++ b/ふりかえりガイドブック.md
@@ -234,10 +234,128 @@
   - 気持ちや気分が落ち込んだのはいつですか。それは何ですか。
   - 最もXX（楽しい・悲しいなどの感情）と感じたのはなんですか・いつですか。なぜそう感じましたか
 
+- 時系列とイベントを収集する質問
+  - XX月・XX週・XX日・XX曜日に起こったことは何ですか
+  - 朝・昼・夕・夜に起こったことは何ですか
+  - （ある出来事の）前に・後に起こったことは何ですか
+  - （ある出来事の）原因となった出来事は何ですか
+  - （ある出来事が）原因となって引き起こされた出来事は何ですか
+  - 定期的に行われるイベント・会議・打ち合わせで行ったことは何ですか
+  - 突発的に行われるイベント・会議・打ち合わせで行ったことは何ですか
+  - 普段とは違うイベントはありましたか。それはなぜ行いましたか
 
+- 過去・現在・未来・理想・ギャップを収集する質問
+  - 最近・少し前・昔に起こったことはなんですか
+  - 今起こっていることは何ですか
+  - すぐに・少し先に・未来に起こることはなんですか
+  - すぐに・少し先に・未来に起こしたいこと・成したいこと何ですか
+  - あなたの・チームの理想は何ですか
+  - 過去と現実の変化は何ですか。どうして変化が起こりましたか
+  - 現実と理想のギャップは何ですか。ギャップの理由は何ですか
+  - 想定できる未来と理想のギャップは何ですか。ギャップの理由は何ですか。
 
+- 学びと気づきを収集する質問
+  - どんな学びや気づきがありましたか。それはなぜですか
+  - 次にいかせそうなこと・カイゼンできそうなことは何ですか。それはなぜですか。
+  - 気になったこと・気がかりなことは何ですか。それはなぜですか。
+  - 興味があるもの・興味が惹かれたものは何ですか。それはなぜですか。
+  - 良い方向・悪い方向に変わったことは何ですか。それはなぜですか。
+  - とくに良いところ・悪いところは何ですか。それはなぜですか。
+  - どんな傾向が見えましたか。それはなぜですか。
+  - どんな考えの違いがありましたか。なぜそう感じましたか。
+  - 今までと同じこと・違うことは起こりましたか。それはなぜですか。
+  - 今までとどう印象が変わりましたか。それはなぜですか。
+  - 一番印象に残ったことは何ですか。それはなぜですか。
+  - ここにいない人に何を伝えたいですか。それはなぜですか。
+  - これだけは伝えたい・教えたいというものは何ですか。それはなぜですか。
 
+- 発散のための質問
+  - どんなに小さくくだらないと感じることでも話してみましょう
+  - 他の人との意見と似ていると思ったものでも、話してみましょう
+  - 思いついたものを教えてください
+  - 今考えていることは何ですか
+  - そこで何が起こりましたか
+  - 少しだけでも変化を起こすとしたら何ができますか
 
+- 収束のための質問
+  - 気に入ったものは何ですか
+  - 大事なもの・あまり大事ではないことと感じていることは何ですか
+  - 優先順位の高い・低いものは何ですか
+  - 効果の高い・低いものは何ですか
+  - やりたいこと・やりたくないことは何ですか
+
+- アクションを収集する質問
+  - 何をしますか・何をカイゼンしますか
+  - やってみたいことは何ですか・挑戦したいことは何ですか
+  - 新しく始めることはなんですか・やめることは何ですか
+  - 強化したいことは何ですか・弱めたいことは何ですか
+  - より学びたいことは何ですか・何がチームを成長させますか
+  - 目標に近づくためにできることは何ですか・一歩前に進むためにできることは何ですか
+
+- アクションを具体化する
+  - Specific（具体的な）
+  - Measurable（計測可能な）
+  - Achievable（達成可能な）
+  - Relevant（適切な・問題に関連のある）
+  - Timely/Time-bounded（すぐにできる・期日のきまった）
+
+アクションを具体化する問い
+- Specific（具体的な）
+  - 何を行いますか・誰がそれを行いますか・いつ行いますか・どこで行いますか・なぜそれを行うのですか・どのように行いますか
+- Measurable（計測可能な）
+  - どうしたらアクションが実行完了になりますか・アクションの効果はどのように測りますか
+- Achievable（達成可能な）
+  - そのアクションは実行できますか・難しそうなところは何ですか
+- Relevant（適切な・問題に関連のある）
+  - アクションはどのような効果をもたらしますか・どのような影響を与えますか
+- Timely/Time-bounded（すぐにできる・期日のきまった）
+  - すぐにアクションはできますか・いつまでにアクションを行いますか
+
+# ふりかえりに関する悩み
+- チームのうまくいった部分はなかなか出てこない時はどうすればよいのか？
+  - ふりかえりの手法や問いの種類を変えたり、問いの順番を変えたりすることでチームに変化が起こるので、状況をみながら「うまくいった部分」「うまくいかなかった部分」のどちらを先に話すべきか検討する
+- 問題がまったく出てこないが大丈夫なのか？
+  - 本来問題がない状態は素晴らしいこと。まずはそのことを全員で祝いましょう。そして、上手くいっていることをさらに伸ばしていくことを検討しましょう
+  - 毎回ふりかえりの際に問題が出ないことに違和感がある場合は、チームの理想像を話し合ってみましょう
+
+# スクラムとふりかえり
+- スプリントレトロスペクティブの目的
+  - **品質と効果を高める方法を計画すること**
+  - チームの品質とは
+    - スクラムを実践するチームのプロセスや、チームのコミュニケーションといった「チームそのもの」の品質のこと
+  - チームの効果とは
+    - チームがコラボレーションにとって生み出す相互作用やプロダクト、ステークホルダーなどのチームの周囲やチーム自身に与える良い影響のこと
+  - 品質と効果を高めるための計画をする場がスプリントレトロスペクティブ
+- スプリントレトロスペクティブで検査する内容
+  - 確認する観点は**個人、相互作用、プロセス、ツール、完成の定義**
+  - 最初は「個人」、「相互作用」から検査していく、「県政の定義」はプロダクトの品質に直結するので話し合えるようにする
+- スプリントレトロスペクティブで話し合う内容
+  - 何がうまくいったのか、どのような問題が発生したのか
+  - なぜそうなったのか真因を探っていく
+- スプリントレトロスペクティブのアクションの作成
+  - チームがもたらす「効果」を最大限に引き出すためのアクションを検討する
+- スプリントレトロスペクティブの時間
+  - １ヶ月のスプリントであれば3時間。１週間のスプリントであれば45分程度
+- スクラムマスターの役割
+  - すべてのスクラムイベントが開催されるように
+  - ポジティブで生産的になるように
+    - ポジティブ→「前向き」、「建設的な」、「実用的な」という意味がある
+  - タイムボックスの制限が守られるように
+
+### NextAction
+- ふりかえりで「ツール」、「完成の定義」を検査できるように促す
+
+# ふりかえりの守破離
+- ふりかえりの「守」
+  - ふりかえりを知ること。目的を知り、ふりかえりを試す。
+- ふりかえりの「破」
+  - 他の手法にも挑戦できる余裕ができ始める
+  - ふりかえりの進め方で慣れ親しんだ手法、新しい手法との差分が見える様になってくる。
+  - これを繰り返すと、さまざまな手法の中にある共通する考え方が見えてくる。考え方の「パターン」ができる
+- ふりかえりの「離」
+  - ふりかえり手法の設計意図や本質を理解できるようになる
+  - それぞれの本質を崩さずにさまざまな手法を自分なりに繋ぎ、混ぜ合わせることで、チームに適した手法の選択や作成ができるようになる
+ 
 
 # 質問の輪とは？
 質問の輪は、**チーム全員が納得できるアイデアやアクションを作り出すための手法**です。
