--- a/スクラム実践者が知るべき97のこと.md
+++ b/スクラム実践者が知るべき97のこと.md
@@ -9,4 +9,17 @@
   - やらない仕事を徐々に増やすこと。顧客が本当に必要なものに集中する
 
 ### プラクティスよりもマインドセットが重要
+- スクラムマスターは、コミュニケーションとコラボレーションと透明性を育んで、安全で信頼と尊敬のある環境を作ることで目的を達成する
+  - アジャイルの4つの価値　適応、頻繁な価値のデリバリー、顧客とのコラボレーション、ピープルファースト
+
+### 実はスクラムの話ではない
+- まずは使い始め、見つかったことに適応していく
+- 優先順位、タイムボックス、役割の境界を使って、チームと組織が派遣したことを理解できるようにしよう
+
+### スクラムはシンプルだ。変えずにそのまま使え
+- 小さな自己組織化したチーム
+- リーン原則
+- 経験主義。頻繁に検査と適応を行い、最大限の成果を得られるようにチームを導く
+
+### Whyからスクラムを始めよ
 - 
