--- a/スクラム実践者が知るべき97のこと.md
+++ b/スクラム実践者が知るべき97のこと.md
@@ -1,4 +1,4 @@
-### スクラムについて誰も教えてくれない５つのこと
+## スクラムについて誰も教えてくれない５つのこと
 - スクラムは問題を解決してくれない
 - プロセスに従うだけではスクラムのメリットはない
   - アジャイルはやり方ではなく、在り方である
@@ -8,18 +8,55 @@
 - スクラムをやることで速くはならない
   - やらない仕事を徐々に増やすこと。顧客が本当に必要なものに集中する
 
-### プラクティスよりもマインドセットが重要
+### Memo
+- スクラムを変えることは組織を変えることならば、組織が変わればスクラムを変わることと理解
+- スクラムをすることで速くなると浅く理解していた
+  - やらない仕事を増やしてくことで速さを手に入れている。
+
+## プラクティスよりもマインドセットが重要
 - スクラムマスターは、コミュニケーションとコラボレーションと透明性を育んで、安全で信頼と尊敬のある環境を作ることで目的を達成する
   - アジャイルの4つの価値　適応、頻繁な価値のデリバリー、顧客とのコラボレーション、ピープルファースト
 
-### 実はスクラムの話ではない
+### Memo
+- プラクティスを先行させてスクラムを推進することで、受託開発のようなチームになってしまう
+
+## 実はスクラムの話ではない
 - まずは使い始め、見つかったことに適応していく
 - 優先順位、タイムボックス、役割の境界を使って、チームと組織が派遣したことを理解できるようにしよう
 
-### スクラムはシンプルだ。変えずにそのまま使え
+### Memo
+- 「スクラムとは、組織がスプリント内で価値を提供できるかを確認するシステムインテグレーションテストである」
+- このメッセージから考えると、スクラムで見つかった不確実性を適応していくことがポイントであり、あたかもスクラムが上手くいっていないとミスリードしてしまうこともある
+
+## スクラムはシンプルだ。変えずにそのまま使え
 - 小さな自己組織化したチーム
 - リーン原則
 - 経験主義。頻繁に検査と適応を行い、最大限の成果を得られるようにチームを導く
 
-### Whyからスクラムを始めよ
-- 
+### Memo
+- スクラムを実践することは簡単だが、スクラムによる問題解決は難しい
+- スクラムはフレームワークであり、方法論ではない。
+- スクラムで直面する問題の解決方法は、スクラムをカスタマイズすることではないよという、メッセージとして受け取った
+
+## Whyからスクラムを始めよ
+- 「スクラムとしては、これで正しい？」とよくある質問だが、その質問に至った経緯が大切である
+- 手法に囚われて目的を見失いがちになる。
+  - 顧客、ステークホルダー、自分自身への価値を生み出し、価値をカイゼンすること。
+- スクラムの存在理由
+  - 各スプリントの終了時にリリース判断可能な「完成」したプロダクトインクメントを届けること
+- スクラムの目的を見失わないようにする２つの質問
+  - スプリントごとに価値がありリリース可能なプロダクトインクリメントを届けられるか
+  - 仕事のやり方をどうやって一緒に完カイゼンできるか？
+
+### Memo
+- スクラムについて、疑心暗鬼になるタイミングはいくつかある。その迷いから抜け出せるように上記の２つの質問を思い出せるようにしたい
+- なぜチームでスクラムをやっているのか？このイベントは何のためにあるのか。これを理解した上でスクラムを推進したい
+
+## 導入してから適応せよ
+- スクラムイベントをやるだけがスクラムではない。
+  - チーム全員が規律を守り、プロセスが上手くいく様に全力を尽くすことが求められる
+- スクラムのアハ体験をするまでは３〜５週間はまず、スクラムガイドの通りにやってみること
+
+### Memo
+- 自分達の行っている「適応」はこれまでのやり方を少し化粧直ししているだけのものになっていないか注意が必要
+- 慣れ親しんでいるから、現場のストレスが少ない。←これが１つの判断基準になると、せっかくの適応機会を潰してしまいかねない
