--- a/スクラム現場ガイド.md
+++ b/スクラム現場ガイド.md
@@ -1,6 +1,45 @@
 ## 25章　価値の測定と最適化
+- チームのベロシティを上げるのにも、中長期的な取り組みを行うにも必要になるのは「透明性」
+  - チームの現状を正しく把握することで次の打ち手が見えてくる
+  - バーンダウンとチャートだけでは足りない。チームの**作業の種類**についても透明性と可視性を提供することでより改善される
 - チームの作業を４つの種類に分割する
   - 機能実現
   - 税
   - スパイク
   - 前提条件
+
+- 機能実現
+  - ステークホルダーに価値を届けるための作業。ユーザーストーリーの形式を取ることが多い。
+  - システムやソフトウェアパッケージのユーザーや購入者に対してビジネス価値を届けるための仕事
+  - 機能実現はROIに直結する、機能実現方得られる全体的なリターンが、そのために費やした金額を上回るべきである
+
+- 税
+  - 会社のための仕事や必須の要求事項であり、チームやグループに重荷となる賦課、義務、任務、請求など
+  - 所得税であれ就業規則であれ、支払う側の人からすれば忌み嫌われるもの
+    - 税は必要悪であり、組織にとって必要な存在でもある
+  - MACで税に該当するもの
+    - スクラムミーティング
+    - リリース
+    - 障害対応
+    - MBO
+    - 全社会議
+
+- スパイク
+  - チームが制作にストーリーや機能のかたまりを見積もれないときによく使うもの
+  - スパイクは短時間、タイムボックスでおこなう活動で、大規模だったり曖昧だったりするタスクやストーリーを完成するのにどんな作業が必要か見つけるためのもの
+  - タイムボックスで実施するもの
+
+- 前提条件
+  - ストーリーに関連するタスクではないが、スプリント中に終わらせるべき作業のこと
+
+- データの構造化
+  - スプリントバックログをそれぞれ４つの種類に分類する
+  - MACではPBI以外をバックログに入れていないので、スクラムマスターが集める必要がある
+
+- データを利用する
+  - スプレッドシートの保存したデータを可視化する
+  - スプリントごとにどの作業にコストをかけたのか分かるようにして、チームとPOに共有する
+
+- 成功の鍵
+  - この取り組みはあくまで透明性と説明責任を果たすためのもの
+  - どのようなプラクティスで適応するのかはチームごとに異なることは理解しておくこと
