list up session

--- a/スクラム現場ガイド.md
+++ b/スクラム現場ガイド.md
@@ -1,3 +1,33 @@
+## 3章　チームコンサルタントでチームの生産性を最適化する
+
+
+## 4章　ベロシティの測定
+
+
+## 8章　専任スクラムマスターの利点
+
+
+## 9章　エンジニアリングプラクティスのスクラムにおける重要性
+
+
+## 10章　チームのコアタイム
+
+
+## 12章　ストーリーやタスクを分解する
+
+
+## 14章　サステインドエンジニアリングとスクラム
+
+
+## 16章　ふりかえり
+
+
+## 23章　持続可能なペース
+
+
+## 24章　動作するソフトウェアを届ける
+
+
 ## 25章　価値の測定と最適化
 - チームのベロシティを上げるのにも、中長期的な取り組みを行うにも必要になるのは「透明性」
   - チームの現状を正しく把握することで次の打ち手が見えてくる
@@ -43,3 +73,9 @@
 - 成功の鍵
   - この取り組みはあくまで透明性と説明責任を果たすためのもの
   - どのようなプラクティスで適応するのかはチームごとに異なることは理解しておくこと
+
+## 26章　プロジェクトのコストを事前に考える
+
+
+## 27章　スクラムにおけるドキュメント
+
