--- a/スクラム現場ガイド.md
+++ b/スクラム現場ガイド.md
@@ -1,8 +1,21 @@
-## 3章　チームコンサルタントでチームの生産性を最適化する
-
-
 ## 4章　ベロシティの測定
-
+- 分からないんりに見積もる
+  - デメリットの1つに「見積もりがコミットメントとして扱われる」
+  - これを開発者が感じているとしたら、マネジメント層とSMで話し合いを行う必要がある
+  - SMはマネジメント層にベロシティについて正しく説明する必要がある
+  - 見積もり通りのベロシティを求められると、ポイントの過剰見積もりを誘発したり、不確実性の高い見積もりをチームが避けるようになる
+- 分からないなりに見積もりするヒント
+  - プロダクトバックログを見積もる
+  - リファレンスストーリーを分割する（MACはこれ）
+  - 理想時間で概算する
+  - チームの稼働時間で見定める
+  - チームのベロシティを見積もる
+  - 幅をもたせたベロシティで話をする
+- 様子をみる
+  - ３スプリント分の平均を計測してチームのベロシティとする
+- ポイント
+  - 既存のチームでも知見のあるPBI、知見のないPBIでベロシティのばらつきは発生しうる
+  - チームのキャパシティを把握する指標としてベロシティを利用するが、ベロシティはコミットメントするものではない
 
 ## 8章　専任スクラムマスターの利点
 
