--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -25,3 +25,12 @@
   - とにかく最後まで読み終える
   - 何度も読み返す
   - とにかく使って、それから戻ってくる
+
+- 空・雨・傘をどう創るのか？
+  - 空がよく見えないときはFact gatheringで空を創る
+    - 空をみるための下準備。事実を集めること
+  - 雨は自らの解釈・判断で創る
+    - 他人の解釈を流用しない
+    - リスクを恐れていては判断は磨かれない
+  - 具体性のある傘を創る
+    - 慣用的な曖昧な表現を控える。効率化、企画する、共有する、把握する
