--- a/アジャイル開発とスクラム.md
+++ b/アジャイル開発とスクラム.md
@@ -8,3 +8,47 @@
     - いきなりショートケーキを作る
     - 顧客やユーザーの目から見て「食べられるもの」を小さく縦スライスに作ってつないでいく
   - 小さく作って、早く顧客に届けることができ、売れ残ったとしても損失は小さく済む
+- アジャイル採用の上位3つの理由
+  - 市場投入までの時間短縮
+  - 要求の優先順位変更が可能
+  - 生産性の向上
+- ウォーターフォールの何が問題なのか？
+  - まずメリットは論理的であること。十分検討され、文書化し、計画に従い、全てを体系的に管理仕様としている
+  - 欠点があるとするなら、それはプロセスに「人間」が関与していること
+  - 人の創造性を奪ってしまう
+    - 途中で計画外のよりよいやり方が見つかっても採用できない
+  - 文章によるコミュニケーションには限界がある
+  - 未来を読む水晶玉はない
+  - 仕事が楽しくない
+  - 部分最適化
+
+# スクラムと知識想像
+- SECIモデル
+  - 共同化→表出化→連結化→内面化
+  - 暗黙知から形式知へと変換されていくプロセス
+- スクラムはスプリントによって獲得・創造した知識を「動くソフトウェア製品の成長」、「スクラムチームの成長」という２つの形で蓄積していく活動
+
+# スクラムと実践知リーダー
+- アジャイル開発で求められるリーダーシップは
+  - 目に見える事象と、その背後にある関係性までを読み、その場で適切な判断を下し実行する。これが実践知
+- ６つの実践知
+  - 何が善かを判断する
+    - 何が善いことなのか、判断基準を作る実践力
+    - 製品のビジョンを聞いてチームがワクワクするような壮大な夢を語る
+  - 本質をつかむ
+    - 変化するありのままを見つめ、その背後にある本質を見抜く
+    - プロダクトのフィードバックを受け入れ、どう適応するべきなのか判断する
+  - 「場」を創出する
+    - 本質をつかみ、それを知識として創造するには、その知が流通しやすいダイナミックな時空間を作り出す必要がある
+    - 必要な場面で必要なメンバーの河合が発生するような場を作りリードする
+  - 本質を伝える
+    - 現場で起きるミクロの直感を、マクロの構想力と関連づけて、対話を通じて、伝えていく
+    - メタファーや物語を交えて、人の共感と論理的理解の両方を作り出さねばならない
+  - 政治力を行使する
+    - チーム外の衝突や矛盾を解消する
+  - 社員の実践知を育む
+    - 個人の実践知を組織内に継承・伝授して、次世代リーダーを育成する
+
+# イノベーションに必要なのは、対話を通じて共振・共感・共鳴する実践知リーダーシップであり、それがスクラムの心だ
+- イノベーションというのは「思いの実現」です
+- 
