--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -1,3 +1,20 @@
 # Chapter3 アジャイルなチームの原理
 - アジャイルはチームをメンタリングする技術
   - アジャイルの目的は「ソフトウェア開発を行うチームをどのように構築していくか？」を突き詰めること
+- アジャイル開発が必要とされた２つの理由
+  - ソフトウェアが大規模化・複雑化
+  - マーケットの不確実性に対応する
+- プロジェクトマネージャーとプロダクトマネージャー
+  - プロジェクトマネージャーは「スケジュール不安」を解消することに責任を持つ
+  - 対処すべき不確実性は「方法不確実性（How）」
+- プロダクトマネージャーは「マーケット不安」を解消することに責任を持つ
+  - 対処すべき不確実性は「目的不確実性（Why）」
+- アジャイル開発だから目的不確実性しか解消できないという訳ではない
+  - 大雑把な見積もりから始まり、繰り返していくことで方法不確実性を下げるアプローチを取っている
+    - いわゆる経験主義的である
+- チームに対する考え方の違い
+  - アジャイル開発は「チーム全体をメンタリング」するための方法論
+  - チームが総体として、チーム自体のゴールに対して高い「ゴール認識」を持ち、チーム自体がチームをメンタリングしている状態を目指す
+    - アジャイル開発のキーワード「自己組織化されたチーム」ということ
+- アジャイルをするな、アジャイルになれ
+  - 
