--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -17,4 +17,12 @@
   - チームが総体として、チーム自体のゴールに対して高い「ゴール認識」を持ち、チーム自体がチームをメンタリングしている状態を目指す
     - アジャイル開発のキーワード「自己組織化されたチーム」ということ
 - アジャイルをするな、アジャイルになれ
+  - アジャイルとは状態を意味する言葉である
+    - 情報の非対称性が小さい
+    - 認知の歪みが小さい
+    - チームより小さい限定合理性が働かない
+    - 対人リスクを取れていて心理的安全性が高い
+    - 課題・不安に向き合い不確実性の削減が効率よくできている
+    - チーム全体のゴール認識レベルが高い
+- ウォーターフォールかアジャイルか
   - 
