--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -25,4 +25,14 @@
     - 課題・不安に向き合い不確実性の削減が効率よくできている
     - チーム全体のゴール認識レベルが高い
 - ウォーターフォールかアジャイルか
+  - ウォーターフォールがスコープとする範囲は「方法不確実性」とそれに伴うスケジュール不安
+  - アジャイルなチームでは方法に加えて、「目的不確実性」とそれに伴う「目的不確実性」、そして継続するチームマネジメントつまり「通信不確実性」
+  - プロダクト開発チームは「方法不確実性の削減」だけではなく、全体の「不確実性削減のシステム」が機能していることが望ましい
+    - スコープを狭く考えると「何を作るのか考える人」、「どのように作るのか考える人」の分断を起こしてしまう
+      - エンジニアリングとは実現する科学
+      - カレーの寓話
+    - 全体論とシステム思考で取り組むことが大事
+  - アジャイルな方法論とは、このような組織間の「限定合理性」と「情報の非対称性」の解消を試みるアプローチ
+  - 「透明性」とは継続したコミュニケーションや仕組みを通じて、コミュニケーションの不確実性を低く維持し、**情報の非対称性**が削減され、**限定合理性の働き**を弱められている状態のこと
+- アジャイルの歴史
   - 
