--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -35,4 +35,18 @@
   - アジャイルな方法論とは、このような組織間の「限定合理性」と「情報の非対称性」の解消を試みるアプローチ
   - 「透明性」とは継続したコミュニケーションや仕組みを通じて、コミュニケーションの不確実性を低く維持し、**情報の非対称性**が削減され、**限定合理性の働き**を弱められている状態のこと
 - アジャイルの歴史
-  - 
+  - アジャイル開発は経営学
+  - SECIモデルとダブル・ループ学習
+    - マインドセットに関する議論は共同化からの表出化。そこから連結化へのアクションを促したい
+- リーン開発
+  - ムダ：付加価値のないもの。顧客に対して付加価値を提供できないものを極限まで減らしていくための考え方
+  - ムラ：不均一。開発フローを均一にしていくことで、スケジュールなどの予見可能性を上げていく
+  - ムリ：過負荷な労働や不合理なストレス。一時的に過負荷にして、パフォーマンスが出ても長期的には実現しない
+- ７つの原則
+  - 全体を最適化する
+  - ムダをなくす
+  - チームに権限移譲する
+  - 学習を強化する：失敗を恐れず、失敗から学習することを重視する
+  - 早く提供する
+  - 品質を作り込む：継続的に仕組みによって品質が担保される様にする
+  - 決定を遅らせる：必要なものを必要なタイミングで作れる様にする
