--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -50,3 +50,24 @@
   - 早く提供する
   - 品質を作り込む：継続的に仕組みによって品質が担保される様にする
   - 決定を遅らせる：必要なものを必要なタイミングで作れる様にする
+- アジャイルソフトウェア開発宣言
+  - プロセスやツール
+    - しばしば、問題はプロセスやツールい求められる。しかし、ツールやプロセスを重要視しすぎると問題の本質を見失う
+  - 個人と対話
+    - チームにいる「個人」に注目して問題を解決するほうがよい。それは「対話」によってなされる。
+  - 包括的なドキュメント
+    - しばしば、問題は包括的なドキュメントを書くことで解決しようとする。しかし、それは実装には影響を与えないので、失敗してしまう。
+  - 動くソフトウェア
+    - 最終的な価値は、動作するソフトウェアによって顧客が満足することで、間接成果物に「本質的」な価値はない
+  - 契約交渉
+    - 最終顧客への価値提供のためにシステムを開発しているが、契約交渉によって問題を解決・隠蔽しようとすることがしばしばある。
+  - 顧客との協調
+    - 最終顧客から、適切にフィードバックをもらい、適時計画を変更することで、本来求めているものを確実に届けることが重要である
+  - 計画に従うこと
+    - しばしば、一度立てた計画は、「コミットメント」となって、それ自体を変更することができなくなってしまう
+  - 変化への適応
+    - 市場や、開発を進める中で起きた出来事に対して、柔軟に対応することが重要である
+- 重視されてきた４要素の原因
+  - これまではソフトウェア開発が「発注側」と「受注側」という２つの役割に分断されており、受注者が「発注者から自身を防衛するために作り上げる」要素になっていた
+  - カレーの寓話になってくる。「情報の非対称性」と「限定合理性」
+  - 受託開発ではこのような状態から抜け出せないのではないか？
