--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -71,3 +71,9 @@
   - これまではソフトウェア開発が「発注側」と「受注側」という２つの役割に分断されており、受注者が「発注者から自身を防衛するために作り上げる」要素になっていた
   - カレーの寓話になってくる。「情報の非対称性」と「限定合理性」
   - 受託開発ではこのような状態から抜け出せないのではないか？
+- アジャイルに関する５つの誤解
+  - アジャイル開発は決まったプロセスである
+  - アジャイル開発では設計しない
+  - アジャイル開発は優秀なメンバーが必要
+  - アジャイル開発は中長期計画がない
+  - アジャイル開発は開発者に決定権がある手法だ
