--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -77,3 +77,7 @@
   - アジャイル開発は優秀なメンバーが必要
   - アジャイル開発は中長期計画がない
   - アジャイル開発は開発者に決定権がある手法だ
+- アジャイル開発は決まったプロセスである
+  - アジャイルはルールは少なく、自由度がある 
+  - 顧客の経営上の課題に対して、最もフィットするように適応していくことがアジリティを生み出す
+  - この対話がなければ、情報の非対称性は解消されない
