--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -81,3 +81,9 @@
   - アジャイルはルールは少なく、自由度がある 
   - 顧客の経営上の課題に対して、最もフィットするように適応していくことがアジリティを生み出す
   - この対話がなければ、情報の非対称性は解消されない
+- アジャイル開発では設計しない
+  - 設計をしないとはアジャイル開発では言っていない
+  - 設計工程だけでは、進捗とみなさないだけ
+  - このような設計の話が出てくる場合は、チーム内のコミュニケーションがうまく機能していない証拠
+- アジャイル開発は優秀なメンバーが必要
+  - 
