--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -86,4 +86,14 @@
   - 設計工程だけでは、進捗とみなさないだけ
   - このような設計の話が出てくる場合は、チーム内のコミュニケーションがうまく機能していない証拠
 - アジャイル開発は優秀なメンバーが必要
-  - 
+  - そもそもアジャイル方法論を導入できないチームはどの手法を採用しても上手くいかない
+  - アジャイル方法論を採用するとメンバーの成長を促されるので、外から見ると優秀なメンバーしかいないように見える
+- アジャイル開発では中長期計画がない
+  - アジャイルであれば、逆にいつでもスケジュールを立てることができる
+  - チームは変更された計画に応じて柔軟に対応する
+- アジャイル開発は開発者に決定権がある方法だ
+  - アジャイルなチームは、開発しているプロダクトの顧客ニーズやビジネス価値について、深く理解するようになっていく
+  - このような関係性の中で、開発に関わる意思決定の権限は徐々に移譲されていく。そのため、優れたアジャイルチームでは権限移譲が行われる。
+    - 情報の非対称性と限定合理性が発生していないこと
+- なぜアジャイルは誤解されるのか
+- 
