--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -96,4 +96,20 @@
   - このような関係性の中で、開発に関わる意思決定の権限は徐々に移譲されていく。そのため、優れたアジャイルチームでは権限移譲が行われる。
     - 情報の非対称性と限定合理性が発生していないこと
 - なぜアジャイルは誤解されるのか
-- 
+  - 経験主義が理解されていない
+  - メタファーがわかりにくい
+  - 対立の図式で流通した
+  - すでにあるビジネスと開発の対立を促進してしまった
+  - 従来の手法を重視する人のアイデンティティに触れた
+  - クールエイドを飲むな
+- アジャイルの格率
+  - アジャイル　＝　目的地（ゴール）
+    - 環境に適応して、最も効率よく不確実性を現象させられている状態。理想状態なので、決して到達できない地点
+  - アジャイルなチーム（自己組織化）　＝　目的地に向かう集団
+    - 理想状態に向かって、全身しているチームの状態。ゴール認識のレベルが高くチームマスタリーを得ている
+  - アジャイルな方法論　＝　目的地に向かうための考え方
+    - 理想状態にチームが向かうために、お互いにメンタリングし、不確実性に向き合い、減少させるにはどうしたらよいか考えるための組織学習の方法論や考え方
+  - アジャイル開発　＝　目的地に向かう特定の移動手段
+    - アジャイルな方法論を取り込んだある具体的なチームで実行されている開発プロセスのこと。移動中に状況に応じて書き換えられ、別のものに変化していく
+  - アジャイル開発手法　＝　移動手段の手引書に書かれていること
+    - アジャイルな方法論を取り入れやすくするためのルールやフレームワークとしてまとめられている手法。多くの場合、状況に合わせてそこに書かれていることも変化させる必要があると書かれている
