--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -113,3 +113,19 @@
     - アジャイルな方法論を取り込んだある具体的なチームで実行されている開発プロセスのこと。移動中に状況に応じて書き換えられ、別のものに変化していく
   - アジャイル開発手法　＝　移動手段の手引書に書かれていること
     - アジャイルな方法論を取り入れやすくするためのルールやフレームワークとしてまとめられている手法。多くの場合、状況に合わせてそこに書かれていることも変化させる必要があると書かれている
+- 「アジャイル」は理想状態
+  - 不確実性とはわからないこと
+  - どのようにしたら、私たちはもっと不確実性を減らすことができるだろうか
+- アジャイルな方法論
+  - 不安に向き合うこと
+  - 少人数の対話を重視する
+    - 大人数では通信不確実性を大きくしてしまう
+  - 役割を分けない
+    - 役割を分けることで「限定合理性」を生み出してしまう
+    - チーム全体の目的において「今自分は何をすべきなのか」という問いをメンバーが常に持つようになる
+    - 「情報の非対称性」、「限定合理性」を抑え込むことができる
+  - 経験のみを知識に変える
+  - 意思決定を遅延する
+    - リアルオプション戦略
+  - 価値の流れを最適化する
+    - 
