--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -128,4 +128,17 @@
   - 意思決定を遅延する
     - リアルオプション戦略
   - 価値の流れを最適化する
-    - 
+    - プロジェクト型チームはレスポンスタイムを最適化する（ウォーターフォール開発）
+    - プロダクト型チームはスループットを最適化する（アジャイル開発・スクラム）
+    - ただしスループットの最適化は絶対的なひつyいう条件ではない
+      - 開発チームが抱える不安やゴールの不確実性のために何をすべきか考えることが大切
+- アジャイル開発は「脱構築」される
+  - アジャイルへ至るために、私たちは何をすべきか
+  - どうしたら、もっとチームの抱える不確実性を減らしていけるのか
+  - という問いを持ち続けることが、アジャイルの起点です
+  - アジャイルという状態に至るための修行という過程が必要になる
+    - アジャイルという状態に至るための手法が「アジャイル開発」
+  - チームが自分たち自身のやり方や役割を変えていくような「脱構築」機能を内蔵させるように振る舞うことを要求しています
+  - 外でうまくいっている何かを探すことではなく、しっかりと自分たちを取り巻く状況を観察することです
+  - 今何をすべきかをしっかりと周囲と対話していくことが大事
+  - アジャイルマインドセットの会を通じて、「脱構築」状態を目指していく
