--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -142,3 +142,58 @@
   - 外でうまくいっている何かを探すことではなく、しっかりと自分たちを取り巻く状況を観察することです
   - 今何をすべきかをしっかりと周囲と対話していくことが大事
   - アジャイルマインドセットの会を通じて、「脱構築」状態を目指していく
+
+# Chapter4 学習するチームと不確実性マネジメント
+- 不確実性マネジメント
+  - 方法不確実性　スケジュール予測と見積もりの手法
+  - 目的不確実性　要求と仮説検証の手法
+  - 通信不確実性　ふりかえりの手法
+- スケジュールマネジメントの基本
+  - 製薬スラックを削除する
+  - 見積もりの予測可能性を上げる
+  - プロジェクトバッファの消費を可視化し改善する
+- 悲観見積もりと楽観見積もり
+- 不安量の大きいタスクを解体する
+  - 使ったことのないライブラリの使用
+  - うまくいくかわからないアルゴリズムの使用
+  - 外部との連携
+  - 詳細仕様が未決定
+  - 影響範囲が読みきれない
+  - 方法
+    - 概念検証
+    - 継続的インテグレーション・テスト駆動開発
+    - プロトタイピング
+- 不安の原因を減らす相対見積もり
+  - Tシャツサイズ
+  - ストーリーポイント
+  - 理想日
+  - 実時間
+- ユーザーストーリーの作り方
+  - 機能の単位を「物語」として分解していくことで、なぜその機能が必要であるのかという文脈が切断されることを防ぐことができる
+  - 誰が、何のためにという文脈を最終顧客の観点から記述することで、思い込みを排除していきます
+  - 開発チームが、開発作業を開始するのにちょうどよい竜殿ストーリーになっているかどうかを判断するフレームワークとして「INVEST」を利用する
+    - Independent：独立している。先行しているタスクが完了していないと始められない、などの影響を受けない
+    - Negotiable：交渉可能である。POと実現方法について交渉することができる
+    - Valuable：価値がある。ストーリー単独で顧客にとっての価値がある
+    - Estimable：見積もり可能である。ストーリーを実現するのにかかる時間が見積もれるだけ、十分な情報がある
+    - Small：適切な大きさである。ストーリーを実現するに要数時間が長すぎない程度なサイズである
+    - Testable：テスト可能である。
+- スクラムにおける役割
+  - PO
+    - やっていくストーリーを優先順位順に並べた「プロダクトバックログ」を作成します
+    - ROIを最大化するために、ビジネス上の要件から、プロダクトバックログを完成させます
+    - WHAT（何を作るべきか）の意思決定の権限を与えられている責任者でもある
+    - チームの近くにいて、チームからの疑問に誰かに確認する必要なく答えられなければ、チームのパフォーマスが下がってしまします
+  - 開発者
+    - プロダクトバックログにしたがってHOW（どのように作るべきなのか）の意思決定を持っています
+  - スクラムマスター
+    - POと開発者の間に存在する「ボトルネック」を解消するためにあらゆることをします
+    - メンバー一人ひとりをメンタリングしたり、スクラムにおけるイベントのファシリテーションを行います
+    - POのもつ不安を開発チームとともに向き合わせ、開発チームのもつ不安をPOとともに解決すように促します
+- 不安を知りチームマスタリーを得る
+  - チームの中の「ゴール認識のレベル」が高くなってくると、そこから自然と不安の招待が明らかになっていきます
+  - 自分たちが今わからないものを
+    - どのようにしたら分かるようになるのか
+    - 分かったものからどのようにしたらカイゼンするのか
+  - を意識できるようになると、自分たちを役割に閉じ込めること自体がおかしなことだと気がつくようになります
+  - このような過程を経て、チームは自分たち自身の手によって広い視野での問題解決を進めることができるようになります→自己組織化と呼ばれる状態
