--- a/エンジニアリング組織論の招待.md
+++ b/エンジニアリング組織論の招待.md
@@ -1,3 +1,26 @@
+# Chapter2 メンタリングの技術
+- メンタリングは、対話を通じて、メンタリングする人の思考力を一時的に貸し出し、思考の幅を広げていくことで、その人の歪んだ認知を補正し、成長させていく手法です
+- ピアメンター
+  - 数年上の先輩が新入社員をサポートする
+  - 階段を上る手助けする
+    - お階段を認識させる
+    - 壁に梯子をかける
+    - 階段を上りたくさせる
+  - 自己説得
+    - 他人が質問で促す
+    - 体感を伴う
+    - 行動の変化が発生しやすい
+- 「悩む」と「考える」の違い
+  - 考えるは行動、悩むは状態
+  - メンターは悩みを聞き出し、気づきを促して「考える」に変えていく
+- 解けないパズルを変換する
+  - 「愛のパズル」なので、（感情的に固執して）解けない
+    - 傾聴する
+  - 「パズルを抱いて」いるので、（客観視できず）解けない
+    - 可視化する
+  - 「解けないパズル」なので、（前提を変えない）と解けない
+    - リフレーミングする
+
 # Chapter3 アジャイルなチームの原理
 - アジャイルはチームをメンタリングする技術
   - アジャイルの目的は「ソフトウェア開発を行うチームをどのように構築していくか？」を突き詰めること
