--- a/ミーティングのデザイン.md
+++ b/ミーティングのデザイン.md
@@ -13,3 +13,16 @@
 - 長時間のMTGに適したお菓子は体にいい脂質とタンパク質
 
 # アイデア、人、時間に合わせてアジェンダを作る
+- アジェンダ作成の核となる３要素　アイデア、人、時間
+- アイデアの数を数えてから人の数を決める
+  - 人数が増えるほど、その分合意点が増える
+  - 出席者の数は３〜７人までにする
+  - ７人以上の参加者がいる場合には、チームを分割していく必要がある
+- 人々を知る
+  - 気さくな口調で
+  - メンバーとの個人的な繋がりを早いうちに見つける
+  - MTGの目的と成果に対する具体的な期待を集める
+  - 明確で直接的な質問をする
+
+# ファシリテーションによって意見の対立を乗り切る
+- 
