--- a/ミーティングのデザイン.md
+++ b/ミーティングのデザイン.md
@@ -25,4 +25,18 @@
   - 明確で直接的な質問をする
 
 # ファシリテーションによって意見の対立を乗り切る
-- 
+- ファシリテーションの役割
+  - その後のディスカッションが従う構造
+  - アジェンダによって参加者を導き、話し合いに加わるすべての人ができるだけ邪魔されないようにする
+  - 会議を構成する４つの枠割（記録係、出席者、ファシリテーター、意図・リーダー）
+- ファシリテーターがやりがちな間違い
+  - アジェンダを独断で決定してしまう。→ステークホルダーと協力して作成する
+  - 中立の立場を忘れる→質問して議論を活発にし、参加者に望ましい行動を取るように指導し、次に何をするべきかについての質問にこたえなければならない
+- 話し合いパターンのファシリテーション
+  - 発散思考によって議論を進め、収束思考によって結論を出す
+  - 発散思考は、意思決定を保留するように出席者に伝える。
+- 発散と収束のパターンをアジェンダに組み入れる
+  - MTGを発散だけに終わらせないようにする
+- 偏見のないファシリテーターをする
+  - 成果にカッコたる意見を持っている人は、ディスカッションのファシリテーターを勤めてはいけない
+  - 
