--- a/ミーティングのデザイン.md
+++ b/ミーティングのデザイン.md
@@ -39,4 +39,39 @@
   - MTGを発散だけに終わらせないようにする
 - 偏見のないファシリテーターをする
   - 成果にカッコたる意見を持っている人は、ディスカッションのファシリテーターを勤めてはいけない
-  - 
+
+# ファシリテーションの戦略とスタイル
+- 適切な質問をする
+  - ミーティングを主導する人は建設的なミーティングだったと思いたがる。
+  - ミーティングに招集された人は何も得るものがなかったと考えがちだ。
+    - エリス・キース
+- 感情を明らかにするする質問
+  - 出席者の感情を引き出し、ミーティングの成果に影響を受ける人の気持ちを探ることができる
+    - 〜〜〜を知ったとき、みなさんはどう思いましたか？
+    - 〜〜〜を使うとき、ユーザーはどう思うでしょうか？
+    - 〜〜〜の問題を解決したとき、どう感じるでしょうか？
+- 動機を明らかにする質問
+  - 話が脱線し過ぎると懸念される場合に、その議論を続ける価値があるか判断するのに役立つのが動機に関する質問
+    - 〜〜とき、どうなればいいと思っていましたか？
+    - 〜〜したら、どうなると思いますか？
+    - 〜〜することによって、何を目指しましたか？
+- 行動を明らかにする質問
+  - 意図している行動に関する質問は、どこまで詳しい話を聞けばいいかを知る手がかりになる
+    - 〜〜するために、何をしますか？
+    - 〜〜するにあたって最初のステップはなんですか？
+    - 〜〜を解決するために、あなたは何をしますか？
+- システムを明らかにする質問
+  - システムに関する質問は、プロセスまたはシステムの変更が成果にどのような影響を与えうるか
+    - 〜〜をうまく特定できたら、機能の優先順位はどのような方法で決めますか？
+    - 〜〜で目標を達成できなければ、次のスプリントは中止になりますか？
+    - 〜〜に影響を及ぼしかねない、経営陣の懸念は何ですか？
+- 質問の４つのカテゴリー
+  - 感情を浮かび上がらせる
+  - 動機を突き止める
+  - 望ましい行動を明確にする
+  - 複雑なやりとりの段取りを決める
+- 質問の設計をファシリテーションに活かす
+  - まずはミーティングで目指す成果を決める
+  - その次に、それらの成果の達成に役立つと思う質問を書き出してみる
+  - 書き出した質問から憶測を排除する
+  - さらに４つのカテゴリーのうちで１つにフォーカスした質問をつくる
