--- a/ミーティングのデザイン.md
+++ b/ミーティングのデザイン.md
@@ -73,5 +73,17 @@
 - 質問の設計をファシリテーションに活かす
   - まずはミーティングで目指す成果を決める
   - その次に、それらの成果の達成に役立つと思う質問を書き出してみる
-  - 書き出した質問から憶測を排除する
+  - 書き出した質問から憶測を排除する（ファシリの思い込みを無くす）
   - さらに４つのカテゴリーのうちで１つにフォーカスした質問をつくる
+- ファシリテーションスタイル
+  - 臨機応変なファシリテーションを目指す
+    - 自由に使える会話のヒント集を用意している
+    - 出席者に対する深い共感を伝える
+  - 台本通りか臨機応変か
+  - ビジュアルかことばか
+  - スペース・メーキングかスペース・フィリングか
+- ファシリテーターの能力の構築
+  - ミーティングを成功させるための材料を集める能力
+    - 情報、問題の背景、現時点の解決策、などなど事前に知っておきたい情報
+    - 事前準備する能力
+  - 問題解決を浮かび上がらせるのに必要な活動は何かを判断する能力
