--- a/ミーティングのデザイン.md
+++ b/ミーティングのデザイン.md
@@ -87,3 +87,15 @@
     - 情報、問題の背景、現時点の解決策、などなど事前に知っておきたい情報
     - 事前準備する能力
   - 問題解決を浮かび上がらせるのに必要な活動は何かを判断する能力
+
+# よりよいミーティングがよりよい組織を作る
+- 2つの文化
+  - 組織が理想とする文化
+  - 習慣にもとづく文化
+- ミーティングは新しい文化の理解を助ける
+  - 組織のミーティングにおける行動を観察し、理解し、モデル化し、最後に解明することで、よりよい成果につながる洞察が得られる
+- ミーティングは、新しく会社に入った人が組織の信じる文化と実際のものごとのやり方との違いを理解する一助になる
+- 組織の価値観を反映する文化を確立する方法として、マネージャーはミーティングで社員に促したい行動を明示することができる。
+- MTGでは、非難や叱責で威嚇せず、失敗を分析し、思い込みを明らかにし、戦略的思考はたとえそれが間違っていても高く評価する
+- 定期的なMTGにいつもは一緒に仕事をしない部門の社員を出席させて、共通の目標を目指す、あるいは実践するといった試みをしてみる。その結果、各部門のワークフローの断片化によって生じるグループ間の知識障害がなくなる。
+- MTGで社内の慣行を変えるには、ときには外部の視点が必要だ。来る日も来る日も同じMTGをしていると、カイゼン機会に気づくのは難しい。
