--- a/ミーティングのデザイン.md
+++ b/ミーティングのデザイン.md
@@ -99,3 +99,13 @@
 - MTGでは、非難や叱責で威嚇せず、失敗を分析し、思い込みを明らかにし、戦略的思考はたとえそれが間違っていても高く評価する
 - 定期的なMTGにいつもは一緒に仕事をしない部門の社員を出席させて、共通の目標を目指す、あるいは実践するといった試みをしてみる。その結果、各部門のワークフローの断片化によって生じるグループ間の知識障害がなくなる。
 - MTGで社内の慣行を変えるには、ときには外部の視点が必要だ。来る日も来る日も同じMTGをしていると、カイゼン機会に気づくのは難しい。
+
+# プロジェクトの第一歩はミーティング
+- ステークホルダーミーティング
+  - 目標
+    - 仕事に関する自分とステークホルダーの理解の整合性を判断すること
+    - 高い透明性とステークホルダーのありのままを引き出す必要がある
+  - 成果測定
+    - 特定したギャップの数。プランのカイゼンにとって、有益なギャップが多いほど良い
+    - インタビューがギャップに対処する最適なタイミングではない理解も大切
+    
