--- a/ミーティングのデザイン.md
+++ b/ミーティングのデザイン.md
@@ -109,3 +109,29 @@
     - 特定したギャップの数。プランのカイゼンにとって、有益なギャップが多いほど良い
     - インタビューがギャップに対処する最適なタイミングではない理解も大切
     
+# 中間地点のミーティングで道筋を示す
+- アジャイルデイリースクラム
+  - 目標
+    - 前回の終了時点から作業を再開させるために行う。情報伝達。
+  - 成果測定
+    - PBIの進捗状況。PBIのステータスが変化した数。
+    - 成果を上げるためにWIP制限などを設ける
+- 批評
+  - 目標
+    - 当事者間の継続的で建設的な関係の構築がよい批評の長期的なメリット
+    - 結びつきが強いほど、否定的な話がしやすくなり、望ましい成果を達成することになる
+      - 良くないのは、批評で解決策の話をしてしまうこと。そうすると、ディスカッションで何が問題でなぜそれが重要なのかについての理解を深めることができない
+  - 成果測定
+    - 現在発生している、何らかの措置を実行することが可能な問題を見極めるのが批評ミーティングの目標
+- ワークショップ
+  - 目標
+    - 長期のリスクに対応すると同時に、多様な見解を取り入れなければ生まれないようなアイデアを作ること。もう１つは意思決定
+  - 成果測定
+    - どんな意思決定がされたのか
+    - １人の出席者が議論を牛耳ると多様な視点は反映されない
+- 中間地点のミーティングは、仕事に関する共通のビジョンを強固にし、信頼を確立するのに役立つ
+- 必ず’生じるであろう予期せぬ問題を見極めるには信頼が必要
+- 中間地点天のミーティングは、仕事上の人間関係を左右する前提について考える重要な機会である
+- 1回のミーティングで終わらない、長期に渡って充実した人間関係を作ることが望ましい
+
+
