--- a/ミーティングのデザイン.md
+++ b/ミーティングのデザイン.md
@@ -134,4 +134,21 @@
 - 中間地点天のミーティングは、仕事上の人間関係を左右する前提について考える重要な機会である
 - 1回のミーティングで終わらない、長期に渡って充実した人間関係を作ることが望ましい
 
-
+# 最後のミーティングで一件落着
+- レトロスペクティブ
+  - 目標
+    - チームの成長をサポートするもの
+    - 繰り返し成功を実現できるようにする
+  - 成果測定
+    - 前回のレトロスペクティブとの関連
+    - 今回のスプリントの成果を、前に議論して決めた期待される成果（目標）で割れば、現在の周防リントでどれくらい工場したかを測定することができる
+- 事後分析
+  - 事後分析をやりたくないという３つの理由がある
+    - レトロとは異なり、議論されているプロジェクトに変更を加えることができない
+    - 字母分析には明白なディペンデンシーはない
+    - 事後分析はよく何の成果もないと批判される
+  - 目標
+    - 過去の何かを明らかにして、将来役立つ情報を引き出さなければならない
+  - 成果測定
+    - 個人とチームの両方の改善できる要素を一覧にして、議論しながら全員で見られるようにする
+    - メンバー全員から改善できる要素を引き出していることが大事
