--- a/アジャイルに効くアイデアを組織に広めるための48パターン.md
+++ b/アジャイルに効くアイデアを組織に広めるための48パターン.md
@@ -23,3 +23,17 @@
   - このような姿勢で仕事をすすめ、勇気と思いやりをもって人々と接していくなら、自分の役目は人々の背中を押すだけになる
   - 「人は変化に抵抗するのではなく、変化させられることに抵抗する」
   - **人々を巻き込む**というスタンスで取り組むこと
+
+# 戦略かパターンか
+- パターンは専門知識をつかまえる方法
+- パターンは繰り返し用いられたベストプラクティスをある状況における問題への解決方法の形式で文書化したもの
+- 特定の状況で特定の問題を解決する方法が会ったとき、それはパターンなのかガイドラインなのか？
+  - 答えは「そのパターンはどうやってつくられたのだろう？」という逆質問の中になる
+- パターンを有効に選択できるようにするには
+  - 直面している問題について、きちんと時間をとって説明することが重要。それだけで、提案する新しいルール（解決方法を含む）に対する抵抗が減り、無視されるということも少なくなる
+- 蓄積された知恵を簡単に参照する方法をもたなければ、あなたはあなた自身がなにを知っているのか、思い出すことすらできない
+  - パターン名が、特定領域の問題に関して話し合うためのボキャブラリとなり、立ち塞がる障害を乗り越えるための手助けになる
+- スクラムで積み重ねてきた経験側にパターン名をつけて、他チームでも参照できるようにしたい。
+  - なぜ、そのパターンが作られたのかと一緒に記録しておきたい
+  
+
