--- a/アジャイルに効くアイデアを組織に広めるための48パターン.md
+++ b/アジャイルに効くアイデアを組織に広めるための48パターン.md
@@ -36,4 +36,14 @@
 - スクラムで積み重ねてきた経験側にパターン名をつけて、他チームでも参照できるようにしたい。
   - なぜ、そのパターンが作られたのかと一緒に記録しておきたい
   
-
+# さてどこから始めようか
+- エバンジェリズムことが成功の必須条件
+- 予備調査・ふりかえりの時間・小さな成功・ステップバイステップ
+- 予備調査
+  - 最小限の投資で済み、次に進むべき道を決めるのに役立つフィードバックを得られる
+- ふりかえりの時間
+  - 走りながら学習する
+- 小さな成功
+  - 途中にあるどんな小さなことも忘れずにみんなで祝うようにする
+- ステップバイステップ
+  - 一度にたくさんやりすぎたり、早く結果が出るように期待しすぎないようにする
