--- a/アジャイルに効くアイデアを組織に広めるための48パターン.md
+++ b/アジャイルに効くアイデアを組織に広めるための48パターン.md
@@ -37,6 +37,7 @@
   - なぜ、そのパターンが作られたのかと一緒に記録しておきたい
   
 # さてどこから始めようか
+- 組織に新しい導入したいやり方が見つかった時にどこから始めたら良いのか？
 - エバンジェリズムことが成功の必須条件
 - 予備調査・ふりかえりの時間・小さな成功・ステップバイステップ
 - 予備調査
@@ -47,3 +48,15 @@
   - 途中にあるどんな小さなことも忘れずにみんなで祝うようにする
 - ステップバイステップ
   - 一度にたくさんやりすぎたり、早く結果が出るように期待しすぎないようにする
+
+# 次にすべきことは、なに？
+- エバンジェリストとして、組織で走り始めたら、次に何をすべきなのか？
+- 最終的には責任をもち、担当になってくれる人を探す
+  - 重要なのはオーナーシップ（当事者意識）
+  - 人が変化に抵抗する理由はたくさんあるが、これらの抵抗に打ち勝つ方法の１つがオーナーシップである
+- 協力を求めるべき人は？
+  - コネクター（８）
+  - 達人を味方に（１４）
+  - イノベーター（１６）
+- ありがとうを伝えること
+  - 相手が普通の業務の範囲内だと思っていることに対して感謝を伝える
