--- a/アジャイルに効くアイデアを組織に広めるための48パターン.md
+++ b/アジャイルに効くアイデアを組織に広めるための48パターン.md
@@ -60,3 +60,22 @@
   - イノベーター（１６）
 - ありがとうを伝えること
   - 相手が普通の業務の範囲内だと思っていることに対して感謝を伝える
+
+# ミーティングあれこれ
+- 達人や同僚に助けを求めるための１つの手段はミーティングすること
+- 便乗
+  - 新しいMTGを設定せずに、既存のMTGで一緒に伝えること
+- ブラウンバッグ・ミーティング
+  - ランチをしながらMTGする。食事しながらだと、ポジティブな意見が出やすい
+- 適切な時期
+  - 共有するチームの稼働状況を見計らってMTGを実施する
+- タネをまく
+  - つかんだ情報はすぐに使ってみる。良さそうな情報は率先して共有していく
+- 外部のお墨付き
+  - アイデアが本当に有用なのか根拠がない時には、外部の権威に
+- 定期的な連絡
+  - 興味を持ってくれている人がいるなら、情報は定期的に発信してモチベを維持する
+- 電子フォーラム
+  - Slackチャンネルのようなものを作成して、コミュニケーションを取りやすい場を作る
+- グループのアイデンティティ
+  - 変化への活動にチームのアイデンティティを与えれば、アイデアがチームで認識されやすくなる
