--- a/アジャイルに効くアイデアを組織に広めるための48パターン.md
+++ b/アジャイルに効くアイデアを組織に広めるための48パターン.md
@@ -79,3 +79,13 @@
   - Slackチャンネルのようなものを作成して、コミュニケーションを取りやすい場を作る
 - グループのアイデンティティ
   - 変化への活動にチームのアイデンティティを与えれば、アイデアがチームで認識されやすくなる
+
+# 行動を起こそう！
+- コミュニティは成長を始め、次の大きな一歩を進めるタイミングになった
+- やってみる
+  - ものごとを始める前に完璧を目指して準備をする必要はない。まずはやってみること
+- 勉強会
+  - 自らの経験に基づき、自分で発見した（または自分で正しいと判断した）ことだけが、行動に大きな影響を与える。」
+  - この気づきをいかに作り出していくのかが大事であり、勉強会は有効な手段の１つ
+- メンター
+  - 今できていること以上のノウハウを少しでももっている人は非常に価値がある
