--- a/アジャイルに効くアイデアを組織に広めるための48パターン.md
+++ b/アジャイルに効くアイデアを組織に広めるための48パターン.md
@@ -89,3 +89,16 @@
   - この気づきをいかに作り出していくのかが大事であり、勉強会は有効な手段の１つ
 - メンター
   - 今できていること以上のノウハウを少しでももっている人は非常に価値がある
+
+# すべては人との関わり
+- 変化のプロセス全体を通して、すべての段階で人々との相互作用が起きていく
+  - 相互作用とはすなわちコミュニケーションである
+- 個人的な接触
+  - 相手が身を置いている状況において、その人が抱えている問題の解決にどのように役立つのか、各々が理解できるように手助けする
+  - メンタリングに近い
+- テイラーメイド
+  - 個人的な接触と同じように個人の課題を対処するものであるが、より相手に寄り添った形になる
+  - 相手に必要な情報を取捨選択して、効果的な形にして提供することが大事
+  - サーヴァントリーダーシップに近い
+- 相談できる同志
+  - 上記の２パターンを試しても良い施策が見つからない時には、他の誰かに助けてもらうようにする
