--- a/アジャイルに効くアイデアを組織に広めるための48パターン.md
+++ b/アジャイルに効くアイデアを組織に広めるための48パターン.md
@@ -102,3 +102,16 @@
   - サーヴァントリーダーシップに近い
 - 相談できる同志
   - 上記の２パターンを試しても良い施策が見つからない時には、他の誰かに助けてもらうようにする
+
+# 今あなたは専任になった！
+- これまでの取り組みが成果を出し始めたところで、業務が渋滞をしてくることになる。さらにスケールさせていくには「次の一歩」が必要になる
+- 正式な推進担当者
+  - これから先の推進は自身の業務の一部として認めてもらえるようにする
+- 身近な支援者
+  - 上司とコミュニケーションを通じて、業務への認識を揃えておく必要がある
+- 経営層の支持者
+  - 自分の活動がビジネスニーズに繋がることを保証してくれそうな経営幹部の関心を惹けるようにMTGを実施する
+- アーリーアダプター
+  - アイデアが組織にとって、どのように有益なのか示す必要がある
+- アーリーマジョリティ
+  - イノベーションを試す前に誰が上手くいっているのか実例を見せる必要がある
