--- a/アジャイルに効くアイデアを組織に広めるための48パターン.md
+++ b/アジャイルに効くアイデアを組織に広めるための48パターン.md
@@ -115,3 +115,15 @@
   - アイデアが組織にとって、どのように有益なのか示す必要がある
 - アーリーマジョリティ
   - イノベーションを試す前に誰が上手くいっているのか実例を見せる必要がある
+
+# 大衆を説得する
+- 必要に応じて変化するためには、組織が俊敏（アジャイル）でなくてはならない。「その変化はよいものだ」と他人を説得するときに使えるパターン
+- お試し期間
+  - すべての懸念に取り組むのをやめて、一定の期間だけ新しいアイデアを批判者に試してもらうよう提案する
+- 達人のレビュー
+  - 抵抗者たちにデータを求められることがある。自分のアイデアが組織のためになると示せるように、尊敬を集める人々や第一人者たちに評価してもらうことができる
+  - データを集める、アウトカムを計測するだけが指標にはならない。レビューも効果敵だったりする
+- 著名人を招く
+  - 新しいアイデアを支持する著名人が訪れた後には、関心や問い合わせが著しく向上する
+- 謁見
+  - 著名人を招き、チームリーダー、マネージャー、経営陣と交流することで指示を受ける助けになる
