--- a/アジャイルに効くアイデアを組織に広めるための48パターン.md
+++ b/アジャイルに効くアイデアを組織に広めるための48パターン.md
@@ -127,3 +127,21 @@
   - 新しいアイデアを支持する著名人が訪れた後には、関心や問い合わせが著しく向上する
 - 謁見
   - 著名人を招き、チームリーダー、マネージャー、経営陣と交流することで指示を受ける助けになる
+
+# さらなる影響戦略
+- 限られたリソースの中で熱意を日々試される。影響戦略の持ち合わせを拡大し続けなければならない
+- 体験談の共有
+  - お試し期間を設けたなら、その経験を活かして体験談の共有を行う
+- 成功の匂い
+  - ポジティブな結果を聞いた時に人々がイノベーションになびく傾向がある
+  - 小さな成功だったとしても、メンバーに新しく推していくタイミングの１つになり得る
+- ちょうど十分
+  - 「灯台は警笛を鳴らさない。光を放つ。」消極的なメンバーに情報を無理に共有しようとしてはいけない。ちょうどよい量の情報を発信できるように心がける
+- 空間を演出する
+  - 人々が質問しに来ていて、事態が動いているときには空間を演出する。新しいアイデアが組織のいたるところで見られるようにしておく
+- トークン
+  - イベントや勉強会の参加者に何か記念品を持ち帰ってもらう
+  - イベントに参加したことを印象付けるものがあると良い
+- 場所重要
+  - 未来についてMTGするときはいつもの職場から離れてみるのも良いかもしれない
+
