--- a/アジャイルに効くアイデアを組織に広めるための48パターン.md
+++ b/アジャイルに効くアイデアを組織に広めるための48パターン.md
@@ -145,3 +145,12 @@
 - 場所重要
   - 未来についてMTGするときはいつもの職場から離れてみるのも良いかもしれない
 
+# 続けていくために
+- 自分が導入したイノベーションがチームで組織で使われるところまで達成することができた。この状態を維持し、進み続けていくために大切なことはなにか？
+- みんなを巻き込む
+  - メンバーにイノベーションの成果目標を説明し、カイゼンのアイデアを募るようにする
+  - チームを正しい方向に進めるためのたくさんの行動と価値のある意見を引き出すことができる
+- 勢いの持続
+  - 上手くいったアイデアを導入できたとしても、注目を集め続けないと生き残れない
+  - 変化への活動は生き物のように扱い、生かし続けるために気を配ってやる必要がある
+
