--- a/アジャイルに効くアイデアを組織に広めるための48パターン.md
+++ b/アジャイルに効くアイデアを組織に広めるための48パターン.md
@@ -154,3 +154,19 @@
   - 上手くいったアイデアを導入できたとしても、注目を集め続けないと生き残れない
   - 変化への活動は生き物のように扱い、生かし続けるために気を配ってやる必要がある
 
+# 抵抗と付き合う
+- イノベーションへの情熱があつとはいえない人たちにぶつかることがある。実際は単に躊躇っている人がほとんどなので、前向きな気持ちになるように促す
+- 恐れは無用
+  - アイデアに懐疑的なメンバーの話を聞き、疑問に答えられるように準備をしていく
+  - 自分とは異なる立場の声を聞き、メッセージを心の中に受け入れる
+- 橋渡し役
+  - より広いコミュニティに到達できる人に助けを求めること
+- 懐疑派代表
+  - 負の側面を見つけるのが得意な人に、それを公式な任務としてお願いして、貢献してもらうようにする
+  - 協力者として味方につけておくことでモンスターを生み出さないようにする
+- 根回し
+  - 組織内の政治的な力が働いていることは往々にしてある
+  - 協力者、参加者には感謝を伝えて、良好な関係性を培っていく必要がある
+- 将軍の耳元でささやく
+  - マネージャー層を説得するのに困難ならば、さらに上の層のマネージャーとの関係性を築けるようにする
+  - チームにとっての大きな後ろ盾を用意することで進めやすくなる
