--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -34,3 +34,20 @@
     - リスクを恐れていては判断は磨かれない
   - 具体性のある傘を創る
     - 慣用的な曖昧な表現を控える。効率化、企画する、共有する、把握する
+
+- 「それ」と「それ以外」で【空・雨・傘】を広げよう
+  - 空・雨・傘は一通りとは限らない
+  - 異なる空が見える
+    - 自分の見える空は限られる
+    - 異なる空に答えが見えることがある
+    - マクロ視点・ミクロ視点
+      - SMとしても開発者には見えているチームの課題意識はいくつもあるように感じる
+      - このギャップを埋めるには1on1など意識的にコミュニケーションする必要がある
+  - １つの空から異なる雨が降る
+    - 常識的な雨が常にベターとは限らない
+  - 同じ雨から異なる傘が出る
+    - 最もベターな傘を選択する
+  - 空・雨・傘の枝分かれをイメージする
+    - 異なる空が見える
+    - １つの空から異なる雨が降る
+    - 同じ雨から異なる傘が出る
