--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -53,5 +53,8 @@
     - 同じ雨から異なる傘が出る
 - 「段取り」と「意味合い」の空・雨・傘に注意
   - 空・雨・傘の多重構造
-  - 
-- 
+  - 段取りの空・雨・傘ではアクションの意思決定までしか至らない
+  - 意味合いの空・雨・笠を行うことで完成する
+- 万能薬「それ」と「それ以外」で対応できる
+  - １つの解決策が思いつけば、「それ」の対極にあるあるものを探す
+    - マクロ視点⇆ミクロ視点
