--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -58,3 +58,10 @@
 - 万能薬「それ」と「それ以外」で対応できる
   - １つの解決策が思いつけば、「それ」の対極にあるあるものを探す
     - マクロ視点⇆ミクロ視点
+- 【解読・草案・評価・選択】で精度を上げる
+  - 解読：経験、論理的思考などを組み合わせながら、問題の本当の姿を掴む
+  - 創案：解読した問題に対し、解決するための方策すなわち解決策の選択肢をいくつか作り出すこと
+  - 評価：創出した複数の解決案選択肢に対して、優劣をつけること
+  - 選択：評価した選択肢の中から、最もベターな斧を選び出す
+  - 解読で空・雨を見つけ出し
+  - 創案・評価・選択で傘を決めていく
