--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -65,3 +65,14 @@
   - 選択：評価した選択肢の中から、最もベターな斧を選び出す
   - 解読で空・雨を見つけ出し
   - 創案・評価・選択で傘を決めていく
+- まずは【解読】に力を注ぐ
+  - 何を解読するのか？
+    - データ
+    - 人の話
+    - 起こっている現象
+  - 解読の２つのルール
+    - 問題が不明確な場合→独自に解読せよ
+    - 問題が明確に見える場合→それでも、独自に解読せよ
+      - 常識、経験や前例に剃って、形にはまったパターン認識をしやすい
+      - 目に見えやすい部分だけを問題と捉えやすい
+      - 多数意見・権威者の意見、印刷されたデータ・コメントを信じやすい
