--- a/問題解決の全体観・上巻・ハード思考編.md
+++ b/問題解決の全体観・上巻・ハード思考編.md
@@ -76,3 +76,10 @@
       - 常識、経験や前例に剃って、形にはまったパターン認識をしやすい
       - 目に見えやすい部分だけを問題と捉えやすい
       - 多数意見・権威者の意見、印刷されたデータ・コメントを信じやすい
+- 解読の３パターン
+  - 視点変更
+    - 立ち位置変更：ものの見方を変える
+    - フィルター変更：パターン・形に当てはめて考えたり、意図的にそれを外して考えたりする
+    - 言い換え：初めの問題認識を意識的に言い換えて、それまでとは異なる捉え方をする
+  - 要因特定
+  - グルーピング推理
